--- a/css/style.css
+++ b/css/style.css
@@ -99,6 +99,7 @@ body {
 /* Footer */
 
 .attribution {
+  margin-top: 5rem;
   font-size: 11px;
   text-align: center;
 }
@@ -134,39 +135,17 @@ body {
   }
 }
 
-@media screen and (min-width: 56.25em) {
-  /* 900px */
-  /* header */
-  .header {
-    padding: 0 9rem;
-  }
-
-  .header__heading {
-    font-size: 4rem;
-  }
-
-  .header__text {
-    font-size: 2rem;
-  }
-
-  /* Main */
-
-  .section__col-heading {
-    font-size: 3rem;
-  }
-}
-
-@media screen and (min-width: 62.5em) {
-  /* 68.75em/1100px */
-  /* 62.5/1000 */
-
+@media screen and (min-width: 53.125em) {
+  /* 850px == 53.125em */
   .container {
-    width: 144rem;
-    margin: 0 auto;
+    max-width: 144rem;
+    margin: auto;
+    margin-bottom: 7.5rem;
   }
 
   /* header */
   .header {
+    padding: 0 5rem;
     margin-bottom: 7rem;
     text-align: center;
   }
@@ -178,7 +157,7 @@ body {
   .header__text {
     font-size: 2.1rem;
     letter-spacing: 1px;
-    padding: 0 21rem;
+    padding: 0 9rem;
   }
 
   /* Main */
@@ -188,28 +167,17 @@ body {
 
   .section {
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
     justify-content: center;
     align-content: center;
-    gap: 3rem;
+    gap: 3.5rem;
   }
 
   .section__col {
     max-width: 35rem;
     padding: 3.5rem;
-  }
-
-  .section__col-flex {
-    display: flex;
-    flex-direction: column;
-  }
-
-  .col--1 {
-    align-self: center;
-  }
-
-  .col--4 {
-    align-self: center;
+    margin-bottom: 0;
   }
 
   .section__col-heading {
@@ -218,5 +186,43 @@ body {
 
   .section__col-text {
     font-size: 1.3rem;
+  }
+}
+@media screen and (min-width: 59.37em) {
+  /* 950px = 59.37em */
+
+  /* header*/
+  .header__text {
+    padding: 0 13rem;
+  }
+
+  /* main-section-col */
+  .col--1 {
+    transform: translateY(50%);
+  }
+
+  .col--3 {
+    order: 4;
+  }
+
+  .col--4 {
+    transform: translateY(50%);
+  }
+
+  /* footer */
+  .footer {
+    transform: translateX(20%);
+  }
+  .attribution {
+    font-size: 11px;
+    text-align: center;
+  }
+  .attribution a {
+    color: hsl(228, 45%, 44%);
+  }
+}
+@media screen and (min-width: 74.8em) {
+  .footer {
+    transform: translateX(0%);
   }
 }
